<resources>
    <string name="app_name">WSC-Anzeige</string>

    <string name="tab_1">Spiel</string>
    <string name="tab_2">Protokoll</string>
    <string name="tab_3">Anzeige</string>

    <string name="B1">B1</string>
    <string name="B2">B2</string>
    <string name="B3">B3</string>
    <string name="B4">B4</string>
    <string name="B5">B5</string>
    <string name="B6">B6</string>
    <string name="B7">B7</string>
    <string name="B8">B8</string>
    <string name="B9">B9</string>
    <string name="B10">B10</string>
    <string name="B11">B11</string>
    <string name="B12">B12</string>
    <string name="B13">B13</string>
    <string name="B14">B14</string>

    <string name="W1">W1</string>
    <string name="W2">W2</string>
    <string name="W3">W3</string>
    <string name="W4">W4</string>
    <string name="W5">W5</string>
    <string name="W6">W6</string>
    <string name="W7">W7</string>
    <string name="W8">W8</string>
    <string name="W9">W9</string>
    <string name="W10">W10</string>
    <string name="W11">W11</string>
    <string name="W12">W12</string>
    <string name="W13">W13</string>
    <string name="W14">W14</string>

    <string name="zeroSimple">0</string>
    <string name="zeroDouble">00</string>
    <string name="start_stop">Start/Stop</string>
    <string name="start_stop_main">Start/Stop
Hauptzeit</string>
    <string name="start_stop_attacks">Start/Stop
Angriffe</string>
    <string name="horn">Horn</string>
    <string name="shotclock_small">20</string>
    <string name="shotclock_big">30</string>
    <string name="exclusion">Ausschluss</string>
    <string name="penalty">Penalty</string>
    <string name="rolle">Rolle</string>
    <string name="rot_4_min">Rot(4 min.)</string>
    <string name="zeroResult">0 : 0</string>
    <string name="game_section">1</string>

    <string name="colonSeparator">:</string>
    <string name="dotSeparator">.</string>
    <string name="whitespaceSeparator">\u0020</string>
    <string name="dashSeparatorBig"> - </string>

    <string name="fragment_1_title">Spiel</string>
    <string name="fragment_2_title">Protokoll</string>
    <string name="fragment_3_title">LED Boards</string>
    <string name="fragment_4_title">Einstellungen</string>
    <string name="protocol_table_row_nr">Nr</string>
    <string name="protocol_table_row_name">Name</string>
    <string name="protocol_table_row_p2">P2</string>
    <string name="protocol_table_row_p1">P1</string>
    <string name="protocol_table_row_p3">P3</string>
    <string name="protocol_table_row_t">T</string>
    <string name="protocol_Team">Mannschaft:</string>
    <string name="protocol_trainer">Trainer:</string>
    <string name="goal">Tor (Spiel)</string>
    <string name="goalFreethrow">Tor (Freiw.)</string>
    <string name="goalManUp">Tor (Mann+)</string>
    <string name="goalManDown">Tor (Mann-)</string>
    <string name="goalPenalty">Tor (Penalty)</string>
    <string name="firstQuarter">1. Viertel</string>
    <string name="secondQuarter">2. Viertel</string>
    <string name="thirdQuarter">3. Viertel</string>
    <string name="fourthQuarter">4. Viertel</string>
    <string name="result">Ergebnis</string>
    <string name="finalResult">Endergebnis</string>

    <string name="deviceNotFound">Kein Gerät gefunden</string>
    <string name="notFound"> - </string>
    <string name="connect">Verbinden</string>
    <string name="connected">Verbunden</string>
    <string name="connected_all">Alle verbinden</string>
    <string name="wait_for_connection">Warten auf Verbindung</string>
    <string name="search">paired Geräte anzeigen</string>
    <string name="mainBoard">Haupt Anzeige</string>
    <string name="shotclock1">Shotclock 1</string>
    <string name="shotclock2">Shotclock 2</string>
    <string name="shotclock3">Shotclock 3</string>
    <string name="shotclock4">Shotclock 4</string>

    <string name="noPairedDeviceFound">kein gepaartes Gerät gefunden</string>
    <string name="new_game">Neues Spiel</string>
    <string name="main_time">Hauptzeit ändern</string>
    <string name="pause_shorten">Pause kürzen</string>
    <string name="shotclock">Angriffszeit ändern</string>
    <string name="game_settings">Spiel Einstellungen</string>
    <string name="draw_mode">Unentschiedenmodus</string>
    <string name="teams">Teams</string>
    <string name="team_white_input_label">Eingeben von Team White:</string>
    <string name="team_blue_input_label">Eingeben von Team Blue:</string>
    <string name="team_import_button_white">Team White: Spieler aus Datei importieren (CSV/TXT/JSON)</string>
    <string name="team_import_button_blue">Team Blue: Spieler aus Datei importieren (CSV/TXT/JSON)</string>
    <string name="team_label_white">Team White</string>
    <string name="team_label_blue">Team Blue</string>
    <string name="team_import_status_idle">Keine Datei ausgewaehlt.</string>
    <string name="team_import_no_file">Keine Datei ausgewaehlt.</string>
    <string name="team_import_loading">Datei wird geladen ...</string>
    <string name="team_import_open_failed">Datei konnte nicht geoeffnet werden.</string>
    <string name="team_import_parse_failed">Datei konnte nicht verarbeitet werden.</string>
    <string name="team_import_loaded_for_team">%1$s: Import geladen (%2$d Spielerzeilen).</string>
    <string name="team_import_no_valid_rows">Keine gueltigen Zeilen fuer den Import gefunden.</string>
    <string name="team_import_applied_for_team">%1$s: Import uebernommen (%2$d Spieler aktualisiert, %3$d Zeilen uebersprungen).</string>
    <string name="game_standards">Standards</string>
    <string name="brightness_all">Helligkeit alle</string>
    <string name="brightness">Helligkeit</string>
    <string name="load_game">Spiel laden</string>
    <string name="save_game">Spiel speichern</string>
    <string name="save_game_success">Spiel erfolgreich gespeichert.</string>
    <string name="save_game_failed">Spiel konnte nicht gespeichert werden.</string>
    <string name="save_game_cancelled">Speichern abgebrochen.</string>
    <string name="load_game_failed">Spiel konnte nicht geladen werden.</string>
    <string name="load_game_cancelled">Laden abgebrochen.</string>
    <string name="load_game_confirm_title">Spiel laden</string>
    <string name="load_game_confirm_message">altes Spiel loeschen?</string>
    <string name="load_game_confirm_yes">Ja</string>
    <string name="load_game_confirm_no">Nein</string>
    <string name="new_game_confirm_title">neues Spiel</string>
    <string name="new_game_meta_ok">Okay</string>
    <string name="new_game_meta_cancel">Abbrechen</string>
    <string name="competition_label">Bewerb</string>
    <string name="game_number_label">Spiel-Nr.</string>
    <string name="game_meta_default">Bewerb: - | Spiel-Nr.: -</string>
    <string name="end_game">Spiel beenden</string>
    <string name="end_game_confirm_message">Soll das aktuelle Spiel beendet werden?</string>
    <string name="end_game_draw_title">Unentschieden: Abschlussmodus waehlen</string>
    <string name="end_game_draw_title_with_warning">Unentschieden: Abschlussmodus waehlen\nWarnung: Spiel nicht abgeschlossen (%1$d/%2$d). Alle Abschnitte und die Zeit dazu muessen abgelaufen sein.</string>
    <string name="continue_text">Weiter</string>
    <string name="end_game_continue_with_selected_text">Weiter mit %1$s</string>
    <string name="draw_mode_continue_with_selected_text">MIT %1$s WEITER</string>
    <string name="draw_mode_continue_without_selected_text">OHNE %1$s WEITER</string>
    <string name="draw_mode_warning_game_not_completed">Warnung: Spiel nicht abgeschlossen. Alle Abschnitte und die Zeit dazu muessen abgelaufen sein (%1$d/%2$d).</string>
    <string name="end_game_notes_title">Besondere Anmerkungen:</string>
    <string name="end_game_notes_hint">Freitext eingeben ...</string>
    <string name="save_protocol">Save Protokoll</string>
    <string name="save_protocol_success">Protokoll-Screenshot gespeichert.</string>
    <string name="save_protocol_failed">Protokoll-Screenshot konnte nicht gespeichert werden.</string>
    <string name="skip_text">Ueberspringen</string>
    <string name="save_screenshot_label">SAVE -\nScreenshot</string>
    <string name="special_notes_title">Besondere Anmerkungen</string>
    <string name="special_notes_empty">-</string>
    <string name="personal_foul">Persoenliche Fehler</string>
    <string name="personal_foul_with_mode">Persoenliche Fehler (%1$s)</string>
    <string name="goals_order">Torfolge</string>
    <string name="goals_order_with_mode">Torfolge (%1$s)</string>
    <string name="warning_title">Warnung</string>
    <string name="close_text">Schliessen</string>
    <string name="continuation_delete_blocked_message">%1$s kann nicht geloescht werden. Zuerst Eintraege korrigieren (%2$d Logzeilen).</string>
    <string name="timeout_limit_reached_message">Max. Timeouts erreicht: %1$s (%2$s).</string>
</resources>