<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <TextView
        android:id="@+id/actionbar_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/actionbar_game_meta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/game_meta_default"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/actionbar_save_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:background="@color/green_700"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/actionbar_save_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:lines="2"
            android:text="@string/save_screenshot_label"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/actionbar_save_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save_protocol"
            android:padding="2dp"
            android:src="@android:drawable/ic_menu_save"
            android:tint="@color/white" />

    </LinearLayout>

</FrameLayout>